--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@300&display=swap" rel="stylesheet">
         <link href="css/main.css" rel="stylesheet" type="text/css">  
     </head>
-    
+
     <body>
         
         <section id="main">
@@ -17,7 +17,7 @@
                 <a href="gallery.html">Gallery</a>
                 <a href="contact.html">Contact</a>
             </nav>
-            <img class="sectionpic" src="images/diner.jpg" alt="Picture of the diner">
+            <img class="sectionpic" src="img/diner.jpg" alt="Picture of the diner">
             <h1>About Us</h1>
             <p>The original Red Cafe Bistro – this is where everything began. Our Glasgow restaurant is the place where our family created and perfected the authentic dining experience that we are famous for today.</p>
             <p>With several menus packed full of traditional dishes, we have secured our place as the favourite, family-friendly restaurant in the Glasgow community.</p>
@@ -35,7 +35,7 @@
             <li>Tel : 014114145888</li>
             <li>email: info@redcafebistro.com</li>
             </ul>
-            <img class="sectionpic" src="images/diner.jpg" alt="Picture of the diner">
+            <img class="sectionpic" src="img/diner.jpg" alt="Picture of the diner">
             <h2>Red Cafe, Buchanan Street</h2>
             <p>Situated directly across from the Underground, Red Cafe is truly the home of authentic dining in the heart of Glasgow. Following the same ethos as our original restaurant, we serve delicious, traditional food from breakfast through to dinner, 7 days a week.</p>
             <h3>The Dining Experience</h3>
