--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
         <title>The Red Cafe Bistro</title>
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@300&display=swap" rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Architects+Daughter&family=Comfortaa&display=swap" rel="stylesheet">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script> 
         <link href="css/main.css" rel="stylesheet" type="text/css">  
     </head>
 
@@ -78,7 +82,7 @@
 
                 <!-- Testimonial 2 -->
                 <div class="testimonial">
-                    <h3>The Adams Family</h3>
+                    <h3>Adams Family</h3>
                     <img src="img/adams_family.jpg" alt="Image of the Adams family">    
                     <blockquote>
                         <p><span>"</span> We were at the cafe last night. It was amazing! I have to say it is the best meal we have had in quite some time. You will definitely be seeing us all again. We can't wait for our family to come and visit so we can bring them with us!</p>
