Added JQuery Testimonials

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             <!-- Testimonials -->
             <div class="testimonial-wrapper">
                 <!-- Testimonial 1 -->
-                <div class="testimonial">
+                <div class="testimonial" id="testimonialOne">
                     <h3>The Griswalds</h3>
                     <img src="img/griswalds.jpeg" alt="Image of the Griswald family">
                     <blockquote>
@@ -81,7 +81,7 @@
                 </div>
 
                 <!-- Testimonial 2 -->
-                <div class="testimonial">
+                <div class="testimonial" id="testimonialTwo">
                     <h3>Adams Family</h3>
                     <img src="img/adams_family.jpg" alt="Image of the Adams family">    
                     <blockquote>
@@ -92,8 +92,8 @@
 
                 <div class="arrow-wrapper">
                     <div class="arrow-inner">
-                        <img src="img/left.png" alt="Left arrow">
-                        <img src="img/right.png" alt="Right arrow">
+                        <img src="img/left.png" alt="Left arrow" id="leftArrow">
+                        <img src="img/right.png" alt="Right arrow" id="rightArrow">
                     </div>
                 </div>
             </div>
