--- a/gallery.html
+++ b/gallery.html
@@ -9,7 +9,7 @@
         <link href="css/main.css" rel="stylesheet" type="text/css">
     </head>
     <body>
-        <section id="main">
+        <div id="main">
             <nav>
                 <a href="index.html">Home</a>
                 <a href="gallery.html">Gallery</a>
@@ -53,47 +53,47 @@
                     <!-- Slides -->
                     <div class="mySlides">
                         <div class="numbertext">1 / 9</div>
-                        <img src="img/gallery1.jpg" style="width:100%">
+                        <img src="img/gallery1.jpg" alt="image of food" style="width:100%">
                     </div>
 
                     <div class="mySlides">
                         <div class="numbertext">2 / 9</div>
-                        <img src="img/gallery2.jpg" style="width:100%">
+                        <img src="img/gallery2.jpg" alt="image of food" style="width:100%">
                     </div>
 
                     <div class="mySlides">
                         <div class="numbertext">3 / 9</div>
-                        <img src="img/gallery3.jpg" style="width:100%">
+                        <img src="img/gallery3.jpg" alt="image of food" style="width:100%">
                     </div>
 
                     <div class="mySlides">
                         <div class="numbertext">4 / 9</div>
-                        <img src="img/gallery4.jpg" style="width:100%">
+                        <img src="img/gallery4.jpg" alt="image of food" style="width:100%">
                     </div>
 
                     <div class="mySlides">
                         <div class="numbertext">5 / 9</div>
-                        <img src="img/gallery5.jpg" style="width:100%">
+                        <img src="img/gallery5.jpg" alt="image of food" style="width:100%">
                     </div>
 
                     <div class="mySlides">
                         <div class="numbertext">6 / 9</div>
-                        <img src="img/gallery6.jpg" style="width:100%">
+                        <img src="img/gallery6.jpg" alt="image of food" style="width:100%">
                     </div>
 
                     <div class="mySlides">
                         <div class="numbertext">7 / 9</div>
-                        <img src="img/gallery7.jpg" style="width:100%">
+                        <img src="img/gallery7.jpg" alt="image of food" style="width:100%">
                     </div>
 
                     <div class="mySlides">
                         <div class="numbertext">8 / 9</div>
-                        <img src="img/gallery8.jpg" style="width:100%">
+                        <img src="img/gallery8.jpg" alt="image of food" style="width:100%">
                     </div>
 
                     <div class="mySlides">
                         <div class="numbertext">9 / 9</div>
-                        <img src="img/gallery9.jpg" style="width:100%">
+                        <img src="img/gallery9.jpg" alt="image of food" style="width:100%">
                     </div>
 
                     <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
@@ -108,7 +108,7 @@
             <footer>
                 <p>All Content &copy; Red Cafe Bistro 2021</p>
             </footer>
-        </section>
+        </div>
         <script src="js/gallery.js"></script>
     </body>
 </html>
