--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <body>
         
-        <section id="main">
+        <div id="main">
      
             <nav>
                 <a href="index.html">Home</a>
@@ -101,10 +101,9 @@
             <footer>
             <p>All Content &copy; Red Cafe Bistro 2021</p></footer>
             <div>
-                <h1>Testimonial</h1>
                 <noscript>You do not have JavaScript enabled. Please enable to use this function.</noscript>
             </div>
-        </section>
-        <script src="js/script.js" type="text/javascript"></script>
+        </div>
+        <script src="js/script.js"></script>
     </body>
 </html>
